2008-06-08  Scott James Remnant  <scott@netsplit.com>

	* compat/sysv/reboot.c, compat/sysv/runlevel.c, compat/sysv/shutdown.c,
	* compat/sysv/telinit.c: Move into the util directory; we're going
	to support limited SysV-a-like commands without full compatibility
	which is what we always did, and I'm not going to worry about adding
	others.
	* compat/sysv/man/reboot.8, compat/sysv/runlevel.8,
	* compat/sysv/man/shutdown.8, compat/sysv/telinit.8: Move as well.
	* compat/sysv/Makefile.am, util/Makefile.am: Merge.
	* configure.ac: Remove the (commented out) compat/sysv and logd
	Remove the --enable-compat option.
	* Makefile.am (SUBDIRS): Remove (commented out) compat/sysv and logd

	* logd/Makefile.am, logd/main.c, logd/man/logd.8, logd/jobs.d/logd.in:
	Consign logd to oblivion.  We haven't supported it for ages, it has
	non-working issues, and there's got to be a better way to do this.

	* TODO: Update.

	* init/job.c (job_change_goal): Adjust the documentation.  After
	careful thought, there's no way this can return after freeing the
	job, since it'll either block on an event, a process or do nothing.

	* init/job.c (job_start, job_stop, job_restart): Clear the start
	and stop environment, shouldn't necessarily make a difference, but
	it pays to be consistent.

	* dbus/com.ubuntu.Upstart.Job.xml (Start, Stop, Restart): Add methods
	to control jobs, all take an environment array and both Start and
	Restart return an instance path so properties, etc. can be obtained
	afterwards.
	* init/job_class.c (job_class_start, job_class_stop)
	(job_class_restart): Add the code for the top halves of the methods
	* init/job_class.h: Add prototypes for the new methods.
	* init/job.c (job_finished): And the bottom halves go here.
	* init/tests/test_job_class.c (test_start, test_stop)
	(test_restart): Add test cases for the methods.
	* init/blocked.h (blocked_type): Add enums for the new methods.
	* init/blocked.c (blocked_new): Handle the new methods here.